2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/user.scm
	  Export kahua-current-user-class.

2007-05-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-admin.scm, src/kahua-install.scm,
	          src/kahua-server.scm, src/kahua-shell.scm
	  Arrange code and purge usage of with-error-handler.
	  Replace them with guard macro.

2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Compatibility with Emacs 21 (that doesn't have read-directory-name).

2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Context didn't have "x-kahua-remote-addr".

2007-05-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-keyserv.scm
	  Drop sending extra data to worker when a exception
	  raised while request handling.  This behavior caused
	  unexpected exception raising.

	* Fix: src/kahua/test/worker.scm
	  Lack of flush after send request to worker.

2007-05-25  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: skel/proj => skel/src directory
	* Change: src/kahua-package.scm, Makefile.in
	* Change: skel/Makefile.in
	  modify skel's source code directory tree.

2007-05-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-dbutil.scm
	  Add support for -S and -c command line options.
	  It make kahua-dbutil can run in source tree (w/o install).

	* Fix: src/kahua/persistence.scm, src/kahua/persistence/dbi.scm,
	       src/kahua/persistence/mysql.scm, src/kahua/persistence/postgresql.scm
	  kahua-dbutil was broken against Kahua 0.7 or prior version
	  database on MySQL or PostgreSQL.

2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-server.scm
	  Unsafe implementation of kahua-write-static-file.

2007-05-03  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/kahua/persistence/efs.scm
	  When class redefined, index cache confusion occured.
	  Check to syncronize between index-cache and persistence
	  at kahua-instances-by-index.