@@ -1,5 +1,9 @@
 2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* New: src/kahua-user.scm
+	  New command-line user(<kahua-user> instances) management
+	  tool.  This is imported from kahua-web CVS HEAD(0.3_pre10).
+
 	* Change: src/kahua/user.scm
 	  Export kahua-current-user-class.
 
